<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Tesla</string>
    <string name="service_channel_name">차량 감시</string>
    <string name="service_title">차량 감시 중</string>
    <string name="update_channel_name">새 버전 알림</string>
    <string name="shortcut_frunk_short">보닛 열기</string>
    <string name="shortcut_frunk_long">보닛(프렁크) 열기</string>
    <string name="shortcut_trunk_short">트렁크 열기</string>
    <string name="shortcut_trunk_long">뒷 트렁크 열기</string>
    <string name="shortcut_vent_short">창문 환기</string>
    <string name="shortcut_vent_long">창문 환기 모드</string>
    <string name="navigation_pairing_description">자동 설정을 누른 뒤 3분 동안만 무선 디버깅 화면과 현재 Wi-Fi 허용 창을 조작합니다. 현재 네트워크 허용을 기억하고 페어링 코드를 전달합니다. 코드는 저장하지 않으며 완료 후 이 접근성 권한을 꺼도 됩니다.</string>
</resources>
